use https in urls: there is HSTS anyway

--- a/_examples/custom_token/index.html
+++ b/_examples/custom_token/index.html
@@ -6,7 +6,7 @@
         <style type="text/css">
             input[type="text"] { width: 300px; }
         </style>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.min.js"></script>
         <script type="text/javascript">
             window.addEventListener('load', function() {
                 const container = document.getElementById('messages');
