safer default origin checks

--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -22,7 +22,7 @@
                 const container = document.getElementById('messages');
 
                 const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
-                // var centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs', {
+                // const centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs', {
                 //     sockjsTransports: [
                 //         "xhr-streaming",
                 //     ]
