setting custom subscribe data in example

--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -98,7 +98,7 @@
                 centrifuge.connect();
 
                 function handleSubscribe(ctx) {
-                    drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ')');
+                    drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ', data: ' + JSON.stringify(ctx.data) + ')');
                     if (ctx.isResubscribe) {
                         showPresence(sub);
                     }
