--- a/_examples/chat_protobuf/index.html
+++ b/_examples/chat_protobuf/index.html
@@ -22,7 +22,9 @@
                 const input = document.getElementById("input");
                 const container = document.getElementById('messages');
 
-                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket?format=protobuf');
+                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket?format=protobuf', {
+                    protocol: 'protobuf' // Note we are setting protobuf protocol here!
+                });
 
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connect', function(ctx){
