--- a/_examples/user_subscribe_unsubscribe/index.html
+++ b/_examples/user_subscribe_unsubscribe/index.html
@@ -13,7 +13,7 @@
         window.addEventListener('load', function() {
             const container = document.getElementById('messages');
 
-            const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket');
+            const centrifuge = new Centrifuge('ws://' + window.location.host + '/connection/websocket');
 
             // bind listeners on centrifuge object instance events.
             centrifuge.on('connect', function(ctx){
