--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -21,11 +21,8 @@
                 const input = document.getElementById("input");
                 const container = document.getElementById('messages');
 
-                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {
-                    protocolVersion: 'v2',
-                });
+                const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {});
                 // const centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs', {
-                //     protocolVersion: 'v2',
                 //     sockjsTransports: [
                 //         "xhr-streaming",
                 //     ]
