--- a/_examples/chat_protobuf/index.html
+++ b/_examples/chat_protobuf/index.html
@@ -9,7 +9,7 @@
         </style>
         <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding-indexes.js"></script>
         <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/centrifugal/centrifuge-js@master/dist/centrifuge.protobuf.min.js"></script>
+        <script type="text/javascript" src="http://localhost:2000/centrifuge.protobuf.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -23,7 +23,8 @@
                 const container = document.getElementById('messages');
 
                 const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {
-                    protocol: 'protobuf' // Note we are setting protobuf protocol here!
+                    protocol: 'protobuf', // Note we are setting protobuf protocol here!
+                    protocolVersion: 'v2',
                 });
 
                 // bind listeners on centrifuge object instance events.
