--- a/_examples/chat_json/index.html
+++ b/_examples/chat_json/index.html
@@ -22,9 +22,9 @@
                 const container = document.getElementById('messages');
 
                 const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {});
-                // const centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs?cf_protocol_version=v2', {
+                // const centrifuge = new Centrifuge('http://localhost:8000/connection/sockjs', {
                 //     sockjsTransports: [
-                //         "xhr-polling",
+                //         "xhr-streaming",
                 //     ]
                 // });
 
