Support app level ping in ProtocolVersion2 (#224)

--- a/_examples/chat_protobuf/index.html
+++ b/_examples/chat_protobuf/index.html
@@ -23,7 +23,7 @@
                 const container = document.getElementById('messages');
 
                 const centrifuge = new Centrifuge('ws://localhost:8000/connection/websocket', {
-                    protocol: 'protobuf' // Note we are setting protobuf protocol here!
+                    protocol: 'protobuf', // Note we are setting protobuf protocol here!
                 });
 
                 // bind listeners on centrifuge object instance events.
