--- a/_examples/emulation_protobuf/index.html
+++ b/_examples/emulation_protobuf/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="utf-8">
         <title></title>
@@ -7,7 +7,9 @@
             input[type="text"] { width: 300px; }
             .muted {color: #CCCCCC; font-size: 10px;}
         </style>
-        <script type="text/javascript" src="http://localhost:2000/centrifuge.js"></script>
+        <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding-indexes.js"></script>
+        <script src="https://unpkg.com/text-encoding@0.6.4/lib/encoding.js"></script>
+        <script type="text/javascript" src="http://localhost:2000/centrifuge.protobuf.js"></script>
         <script type="text/javascript">
             // helper functions to work with escaping html.
             const tagsToReplace = {'&': '&amp;', '<': '&lt;', '>': '&gt;'};
@@ -20,26 +22,20 @@
                 const input = document.getElementById("input");
                 const container = document.getElementById('messages');
 
-                const centrifuge = new Centrifuge('http://' + window.location.host+ '/connection/http_stream', {
+                const centrifuge = new Centrifuge('http://localhost:8000/connection/http_stream', {
+                    protocol: 'protobuf', // Note we are setting protobuf protocol here!
                     protocolVersion: 'v2',
                 });
 
-                centrifuge.setConnectData({"user-agent": navigator.userAgent});
-
                 // bind listeners on centrifuge object instance events.
                 centrifuge.on('connect', function(ctx){
-                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport + ' with data: ' + JSON.stringify(ctx.data));
+                    drawText('Connected with client ID ' + ctx.client + ' over ' + ctx.transport);
                     input.removeAttribute('disabled');
                 });
 
-                centrifuge.on('message', function(data) {
-                    drawText('Message: ' + JSON.stringify(data));
-                    // Echo data back to server.
-                    centrifuge.send(data);
-                });
-
                 centrifuge.on('publish', function(ctx) {
-                    drawText('Server-side publication from channel ' + ctx.channel + ": " + JSON.stringify(ctx.data));
+                    let str = new TextDecoder("utf-8").decode(ctx.data);
+                    drawText('Server-side publication from channel ' + ctx.channel + ": " + str);
                 });
 
                 centrifuge.on('join', function(ctx) {
@@ -58,23 +54,18 @@
                     drawText('Unsubscribe from server-side channel ' + ctx.channel);
                 });
 
-                centrifuge.on('disconnect', function(ctx){
-                    drawText('Disconnected: ' + ctx.reason  + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
-                    input.setAttribute('disabled', 'true');
+                centrifuge.on('message', function(data) {
+                    const str = new TextDecoder("utf-8").decode(data);
+                    drawText(str);
+                    // Echo data back to server with 'ack' prefix.
+                    const echoData = new TextEncoder("utf-8").encode("ack " + str);
+                    centrifuge.send(echoData);
                 });
 
-                // show how many users currently in channel.
-                function showPresence(sub) {
-                    sub.presence().then(function(result) {
-                        let count = 0;
-                        for (let key in result.presence){
-                            count++;
-                        }
-                        drawText('Presence: now in this room – ' + count + ' clients');
-                    }, function(err) {
-                        drawText("Presence error: " + JSON.stringify(err));
-                    });
-                }
+                centrifuge.on('disconnect', function(ctx){
+                    drawText('Disconnected: ' + ctx.reason + (ctx.reconnect?", will try to reconnect":", won't try to reconnect"));
+                    input.removeAttribute('disabled');
+                });
 
                 // subscribe on channel and bind various event listeners. Actual
                 // subscription request will be sent after client connects to
@@ -86,24 +77,20 @@
                         .on("subscribe", handleSubscribe)
                         .on("error", handleSubscribeError);
 
-                showPresence(sub);
-
                 // Trigger actual connection establishing with a server.
                 // At this moment actual client work starts - i.e. subscriptions
                 // defined start subscribing etc.
                 centrifuge.connect();
 
                 function handleSubscribe(ctx) {
-                    drawText('Subscribed on channel ' + ctx.channel + ' (resubscribed: ' + ctx.isResubscribe + ', recovered: ' + ctx.recovered + ', data: ' + JSON.stringify(ctx.data) + ')');
-                    if (ctx.isResubscribe) {
-                        showPresence(sub);
-                    }
+                    drawText('Subscribed on channel ' + ctx.channel);
 
-                    // This can be whatever JSON you want.
-                    const rpcRequest = {"method": "getCurrentYear"};
+                    const rpcRequest = {"method": "getCurrentYear"}
+                    const binary = new TextEncoder("utf-8").encode(JSON.stringify(rpcRequest));
 
-                    centrifuge.rpc(rpcRequest).then(function(data){
-                        drawText("RPC response data: " + JSON.stringify(data));
+                    centrifuge.rpc(binary).then(function(result){
+                        const str = new TextDecoder("utf-8").decode(result.data);
+                        drawText("RPC response data: " + str);
                     }, function(err) {
                         drawText("RPC error: " + JSON.stringify(err));
                     });
@@ -114,23 +101,25 @@
                 }
 
                 function handleMessage(message) {
+                    const str = new TextDecoder("utf-8").decode(message.data);
+                    const data = JSON.parse(str);
                     let clientID;
                     if (message.info){
                         clientID = message.info.client;
                     } else {
                         clientID = null;
                     }
-                    const inputText = message.data["input"].toString();
+                    const inputText = data["input"].toString();
                     const text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
                     drawText(text);
                 }
 
                 function handleJoin(message) {
-                    drawText('Client joined channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
+                    drawText('Someone joined channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
                 }
 
                 function handleLeave(message) {
-                    drawText('Client left channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
+                    drawText('Someone left channel ' + this.channel + ' (uid ' + message.info["client"] + ', user '+ message.info["user"] +')');
                 }
 
                 function handleUnsubscribe(sub) {
@@ -145,10 +134,13 @@
 
                 document.getElementById('form').addEventListener('submit', function(event) {
                     event.preventDefault();
-                    sub.publish({"input": input.value}).then(function() {
-                        drawText("Successfully published to channel");
+                    const data = {"input": input.value};
+                    const binaryData = new TextEncoder("utf-8").encode(JSON.stringify(data));
+                    sub.publish(binaryData).then(function() {
+                        console.log('message accepted by server');
                     }, function(err) {
-                        drawText("Publish error: " + JSON.stringify(err));
+                        drawText("Publish error: " + err.code + ' ' + err.message);
+                        console.log('error publishing message', err);
                     });
                     input.value = '';
                 });
@@ -157,7 +149,7 @@
     </head>
     <body>
         <form id="form">
-            <label for="input"></label><input type="text" id="input" autocomplete="off" />
+            <input type="text" id="input" autocomplete="off" />
             <input type="submit" id="submit" value="»">
         </form>
         <ul id="messages"></ul>
